--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # compiled output
-/dist
-/node_modules
+./nest-api/dist
+./nest-api/node_modules
 
 # Logs
 logs
@@ -32,3 +32,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json.vscode
+
+# System
+.python-version
