--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,17 @@
 version: "3"
 
 services:
-  # frontend:
-  #   build: luiz6ustav0/desafio2frontend
-  #   entrypoint: ./.docker/entrypoint.sh
-  #   ports:
-  #     - 3001:3000
-  #   volumes:
-  #     - .:/home/node/app
-  #   depends_on:
-  #     - backend
+  frontend:
+    build: ./react-frontend
+    ports:
+      - 3001:3000
+    volumes:
+      - .:/home/node/app
+    depends_on:
+      - backend
 
   backend:
     build: ./nest-api
-    entrypoint: ./.docker/entrypoint.sh
     ports:
       - 3000:3000
     volumes:
