--- a/k8s/frontend/service.yaml
+++ b/k8s/frontend/service.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1  
+apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
@@ -7,5 +7,5 @@ spec:
   selector:
     app: frontend
   ports:
-  - port: 3001
-  - targetPort: 3000
+    - port: 3001
+      targetPort: 3000
